fixed the overlay overflowing bug

--- a/styles.css
+++ b/styles.css
@@ -635,9 +635,11 @@ section {
     transition: opacity 0.3s ease;
 
     z-index: 1500;
+    display: none;
 }
 
 .overlay.show {
+    display: block;
     opacity: 1;
     pointer-events: all;
 }
